# SiliconAI-Validator

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CITATION.cff  README.md  REUSE.toml  pyproject.toml
.github/workflows/: CI.yml
.reuse/templates/: siliconai.jinja2
config/: electron_80-85GeV_mini.toml  muon_100GeV_barrel.toml  muon_100GeV_barrel_narrow.toml  muon_100GeV_barrel_test.toml  muon_70-90GeV_barrel.toml  muon_70-90GeV_central.toml  muon_70-90GeV_full.toml  muon_80-85GeV_mini.toml  pion_80-85GeV_mini.toml
dependencies/: hashes
docker/: Dockerfile  build.sh
scripts/: apply_license.sh  setup_LCG_view.sh  setup_acts.sh  setup_acts_nobuild.sh  setup_environment_only.sh  setup_full.sh  setup_pdm.sh  setup_venv.sh
src/siliconai_acts/: __init__.py
src/siliconai_acts/cli/: __init__.py  config.py  logger.py  logging.py
src/siliconai_acts/common/: detector.py  enums.py  utils.py
src/siliconai_acts/data/: export.py  importing.py  utils.py
src/siliconai_acts/plotting/: common.py  diagnostics.py  validation.py
src/siliconai_acts/scheduling/: digitization.py  generation.py  reconstruction.py  simulation.py
src/siliconai_validator/: __init__.py
src/siliconai_validator/cli/: __init__.py  config.py  logger.py
src/siliconai_validator/common/: detector.py  enums.py  utils.py
src/siliconai_validator/data/: export.py  importing.py  utils.py
src/siliconai_validator/plotting/: common.py  diagnostics.py  utils.py  validation.py
src/siliconai_validator/scheduling/: digitization.py  generation.py  reconstruction.py  simulation.py  submission.py
tests/: __init__.py  conftest.py  test_main.py
tests/resources/: config.toml
