[project]
name = "siliconai-acts"
version = "0.1.0"
description = "SiliconAI companion package for ACTS integration"
authors = [{ name = "Tadej Novak", email = "tadej.novak@cern.ch" }]
requires-python = "==3.9.*"
readme = "README.md"
license = { text = "MPL-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib == 3.8.*",
    "mplhep == 0.3.*",
    "pandas == 2.2.*",
    "particle == 0.23.*",
    "scipy == 1.12.*",
    "tomli-w",
    "tomli",
    "typer[all] == 0.9.*",
    "uproot == 5.3.*",
]

[project.scripts]
siliconai_acts = "siliconai_acts.cli:application"

[tool.pdm.dev-dependencies]
dev = [
    "coverage[toml]",
    "ipykernel",
    "ipympl",
    "mypy == 1.9.*",
    "pandas-stubs == 2.2.*",
    "pre-commit-hooks == 4.5.*",
    "pre-commit",
    "pytest >= 7.0",
    "pytest-cov",
    "pytest-forked",
    "ruff == 0.3.5",
]

[tool.pdm.scripts]
test = "pytest -W error"

[tool.coverage.run]
branch = true
source = ["src/siliconai"]

[tool.coverage.report]
precision = 2
include_namespace_packages = true
exclude_lines = [
    "pragma: no cover",
    "if self.debug:",
    "if debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "__repr__",
]
ignore_errors = true

[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "C90",  # mccabe (complexity)
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff
]
ignore = [
    "UP007",  # non-pep604-annotation (needs python 3.10)
    "D203",   # one-blank-line-before-class (conflicting with no-blank-line-before-class)
    "D213",   # multi-line-summary-second-line (conflicting with multi-line-summary-first-line)
    "FBT001", # boolean-positional-arg-in-function-definition (not wanted)
    "FBT002", # boolean-default-value-in-function-definition (not wanted)
    "N812",   # lowercase-imported-as-non-lowercase (not wanted)
    "ANN101", # missing-type-self (deprecated)
    "ANN102", # missing-type-class (deprecated)
]
pylint = { max-args = 12 }

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["acts.*", "awkward.*", "IPython.*", "mplhep.*", "uproot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=src/siliconai/tests/ --cov=siliconai --cov-report=term-missing:skip-covered --cov-report xml --cov-report html:coverage"
testpaths = ["tests"]
